# ai-slide-deck-generation-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  system.py
app/api/v1/: endpoints.py
app/core/: __init__.py  config.py
app/schemas/: __init__.py  enums.py  presentation.py  question.py  request.py  response.py  slide.py
app/services/: __init__.py  llm_engine.py  prompts.py
tests/: conftest.py
tests/integration/: test_endpoints.py  test_system.py
tests/unit/: test_config.py  test_llm_engine.py  test_schemas.py
